--- a/dot_config/kitty/kitty.conf.tmpl
+++ b/dot_config/kitty/kitty.conf.tmpl
@@ -413,7 +413,7 @@ url_color               #90a959
 #: suffix of "c" on the width/height values to have them interpreted
 #: as number of cells instead of pixels.
 
-# enabled_layouts *
+enabled_layouts splits,fat,tall,grid
 
 #: The enabled window layouts. A comma separated list of layout names.
 #: The special value all means all layouts. The first listed layout
@@ -481,7 +481,7 @@ active_border_color     #d0d0d0
 #: The color for the border of the active window. Set this to none to
 #: not draw borders around the active window.
 
-inactive_border_color   #151515
+inactive_border_color   #202020
 
 #: The color for the border of inactive windows
 
@@ -845,7 +845,7 @@ color15                 #f5f5f5
 #: with respect to the kitty config directory. Environment variables
 #: in the path are expanded.
 
-# clipboard_control write-clipboard write-primary
+clipboard_control write-clipboard write-primary
 
 #: Allow programs running in kitty to read and write from the
 #: clipboard. You can control exactly which actions are allowed. The
@@ -857,7 +857,7 @@ color15                 #f5f5f5
 #: functionality is a security risk as it means that any program, even
 #: one running on a remote server via SSH can read your clipboard.
 
-# allow_hyperlinks yes
+allow_hyperlinks yes
 
 #: Process hyperlink (OSC 8) escape sequences. If disabled OSC 8
 #: escape sequences are ignored. Otherwise they become clickable
@@ -1086,7 +1086,23 @@ color15                 #f5f5f5
 
 #: Window management {{ "{{{" }}
 
-# map kitty_mod+enter new_window
+map kitty_mod+enter new_window
+
+#: Custom mapping for split layout management::
+
+map ctrl+alt+enter      launch --location=vsplit
+map ctrl+shift+enter    launch --location=hsplit
+map ctrl+shift+alt+m    layout_action rotate
+
+map shift+up move_window up
+map shift+left move_window left
+map shift+right move_window right
+map shift+down move_window down
+
+map ctrl+left neighboring_window left
+map ctrl+right neighboring_window right
+map ctrl+up neighboring_window up
+map ctrl+down neighboring_window down
 
 #: You can open a new window running an arbitrary program, for
 #: example::
