--- a/dot_gitconfig.tmpl
+++ b/dot_gitconfig.tmpl
@@ -18,7 +18,7 @@
 
 [alias]
   # List available aliases
-  aliases = !git config --get-regexp alias | sed -re 's/alias\\.(\\S*)\\s(.*)$/\\1 = \\2/g'
+  aliases = config --get-regexp alias | sed -re 's/alias\\.(\\S*)\\s(.*)$/\\1 = \\2/g'
   # Display tree-like log, because default log is a pain…
   lg = log --graph --date=relative --pretty=tformat:'%Cred%h%Creset -%C(auto)%d%Creset %s %Cgreen(%an %ad)%Creset'
   # Useful when you have to update your last commit
@@ -31,27 +31,27 @@
   # standard `commit` command which will trigger hooks.
   rebase-with-hooks = rebase -x 'git reset --soft HEAD~1 && git commit -C HEAD@{1}'
   # List local commits that were not pushed to remote repository
-  review-local = "!git lg @{push}.."
+  review-local = lg "@{push}.."
   # Edit last commit message
   reword = commit --amend
   # Set the current branch upstream
-  set-upstream = !git branch --set-upstream-to=origin/`git symbolic-ref --short HEAD`
+  set-upstream = branch --set-upstream-to=origin/`git symbolic-ref --short HEAD`
   # Undo last commit but keep changed files in stage
   uncommit = reset --soft HEAD~1
   # Remove file(s) from Git but not from disk
   untrack = rm --cache --
 
   # List files aliases
-  ls           = "!git status -suno"
-  ls-modified  = "!git status --porcelain -uno | awk 'match($1, /M/) {print $2}'"
-  ls-added     = "!git status --porcelain -uno | awk 'match($1, /A/) {print $2}'"
-  ls-deleted   = "!git status --porcelain -uno | awk 'match($1, /D/) {print $2}'"
-  ls-renamed   = "!git status --porcelain -uno | awk 'match($1, /R/) {print $2}'"
-  ls-copied    = "!git status --porcelain -uno | awk 'match($1, /C/) {print $2}'"
-  ls-updated   = "!git status --porcelain -uno | awk 'match($1, /U/) {print $2}'"
-  ls-staged    = "!git status --porcelain -uno | grep -P '^[MA]' | awk '{ print $2 }'"
-  ls-untracked = "!git status --porcelain -uall | awk '$1 == \"??\" {print $2}'"
-  ls-ignored   = "!git ls-files --others --ignored --exclude-standard"
+  ls           = status -suno
+  ls-modified  = status --porcelain -uno | awk 'match($1, /M/) {print $2}'
+  ls-added     = status --porcelain -uno | awk 'match($1, /A/) {print $2}'
+  ls-deleted   = status --porcelain -uno | awk 'match($1, /D/) {print $2}'
+  ls-renamed   = status --porcelain -uno | awk 'match($1, /R/) {print $2}'
+  ls-copied    = status --porcelain -uno | awk 'match($1, /C/) {print $2}'
+  ls-updated   = status --porcelain -uno | awk 'match($1, /U/) {print $2}'
+  ls-staged    = status --porcelain -uno | grep -P '^[MA]' | awk '{ print $2 }'
+  ls-untracked = status --porcelain -uall | awk '$1 == \"??\" {print $2}'
+  ls-ignored   = ls-files --others --ignored --exclude-standard
 
 # ---
 [core]
@@ -70,7 +70,7 @@
 [branch]
   # autoSetupMerge controls whether `git branch` and `git checkout -b`
   # imply the `--track` option
-  #autoSetupMerge = local
+  autoSetupMerge = always
   # autoSetupRebase controls whether new branches should be set up to
   # be rebased upon `git pull`
   autoSetupRebase = always
