chore: update zsh profile and many other things

--- a/.chezmoi.yaml.tmpl
+++ b/.chezmoi.yaml.tmpl
@@ -2,15 +2,21 @@ sourceDir: {{ .chezmoi.sourceDir }}
 format: yaml
 
 # --- Chezmoi settings ---
+cd:
+  command: zsh
+
 edit:
   command: code
+
 git:
   autoAdd: true
   autoCommit: false
   autoPush: false
+
 diff:
   format: git
   pager: diff-so-fancy
+
 merge:
   command: code
   args: ["--diff"]
