feat: update kitty font

--- a/dot_config/kitty/kitty.conf.tmpl
+++ b/dot_config/kitty/kitty.conf.tmpl
@@ -7,7 +7,7 @@
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-font_family      MesloLGS NF
+font_family      MesloLGS Nerd Font
 # bold_font        auto
 # italic_font      auto
 # bold_italic_font auto
@@ -817,7 +817,7 @@ color15                 #f5f5f5
 #: remote control. See the help for kitty --listen-on for more
 #: details.
 
-# env 
+# env
 
 #: Specify environment variables to set in all child processes. Note
 #: that environment variables are expanded recursively, so if you
