feat: use delta for git diff

--- a/dot_gitconfig.tmpl
+++ b/dot_gitconfig.tmpl
@@ -10,7 +10,7 @@
 [user]
   email = {{ .email }}
   name = {{ .full_name }}
-  {{ if .gpg.enable_git_sign }}signingkey = {{ .gpg.fingerprint }}{{ end }}
+{{- if .gpg.enable_git_sign }}  signingkey = {{ .gpg.fingerprint }}{{ end }}
 
 [color]
   # Enable colors in color-supporting terminals
