--- a/.chezmoiscripts/run_once_disable_i915_psr.tmpl
+++ b/.chezmoiscripts/run_once_disable_i915_psr.tmpl
@@ -10,7 +10,7 @@
 #
 # -----------------------------------------------------------------------------
 # Script library
-{{ template "bash_library" . }}
+{{ template "libbash/common" . }}
 
 # -----------------------------------------------------------------------------
 # Disable Panel Self Refresh (PSR) on Intel graphic card (issue that freeze the current UI)
