--- a/.chezmoiscripts/run_once_install_whitesur.tmpl
+++ b/.chezmoiscripts/run_once_install_whitesur.tmpl
@@ -10,7 +10,7 @@
 #
 # -----------------------------------------------------------------------------
 # Script library
-{{ template "bash_library" . }}
+{{ template "libbash/common" . }}
 
 # -----------------------------------------------------------------------------
 # Install WhiteSur Gnome theme.
