--- a/.chezmoiscripts/os_requirements/run_after_onchange_linux.tmpl
+++ b/.chezmoiscripts/os_requirements/run_after_onchange_linux.tmpl
@@ -10,7 +10,18 @@
 #
 # -----------------------------------------------------------------------------
 # Script library
-{{ template "bash_library" . }}
+{{ template "libbash/common" . }}
+{{ template "libbash/command" . }}
 
 # -----------------------------------------------------------------------------
 only_run_on! "linux"
+
+if ! command_missing? 'fish'; then
+  if [[ "$(cat /etc/passwd | grep "^${USER}:" | cut -d: -f 7)" != "$(which fish)" ]]; then
+    subtitle 'Install all fish plugins'
+    fish -c 'curl -sL https://git.io/fisher | source && fisher update'
+
+    subtitle 'Change default shell for `fish`'
+    chsh --shell "$(which fish)"
+  fi
+fi
