--- a/.chezmoiscripts/os_requirements/run_onchange_linux_fedora.tmpl
+++ b/.chezmoiscripts/os_requirements/run_onchange_linux_fedora.tmpl
@@ -23,9 +23,9 @@ if command_missing? 'tig' 'delta'; then
   )
 fi
 
-if command_missing? 'kitty' 'fish' 'fzf' 'fd'; then
-  title 'Install missing Terminal tools (`kitty`, `fish` and `fzf`)'
+if command_missing? 'kitty' 'fish' 'fzf' 'fd' 'nvim'; then
+  title 'Install missing Terminal tools (`kitty`, `fish`, `nvim` and `fzf`)'
   (
-    sudo dnf install kitty fish fzf fd-find util-linux-user
+    sudo dnf install kitty fish fzf fd-find util-linux-user neo-vim
   )
 fi
