fix: avoid exit 1 on script

--- a/.chezmoiscripts/os_requirements/run_after_onchange_linux.tmpl
+++ b/.chezmoiscripts/os_requirements/run_after_onchange_linux.tmpl
@@ -14,7 +14,7 @@
 {{ template "libbash/command" . }}
 
 # -----------------------------------------------------------------------------
-only_run_on! "linux"
+only_run_on! "linux" || exit 0
 
 if ! command_missing? 'fish'; then
   if [[ "$(cat /etc/passwd | grep "^${USER}:" | cut -d: -f 7)" != "$(which fish)" ]]; then
