--- a/.chezmoiscripts/os_requirements/run_after_onchange_all.tmpl
+++ b/.chezmoiscripts/os_requirements/run_after_onchange_all.tmpl
@@ -31,22 +31,9 @@ if [ ! -f "${HOME}/.ssh/git.ed25519.pub" ]; then
     ssh-keygen -t ed25519 -C "$(hostname)_GitOnly" -f "${HOME}/.ssh/git.ed25519"
 
     echo "SSH public key: $(tput bold)$(cat "${HOME}/.ssh/git.ed25519.pub")$(tput sgr0)"
-    echo "Please copy the previous key and press Enter."
+    echo "Please copy the previous key and go to https://github.com/settings/ssh/new?ssh_key"
+    echo "Press Enter to continue..."
     read
-
-    xdg-open "https://github.com/settings/ssh/new?ssh_key"
   )
 fi
 
-# Install Caskaydia Cove Nerd Font
-if [[ ! -f "${HOME}/.local/share/fonts/Caskaydia Cove Nerd Font Complete Light.otf" ]]; then
-  title "Install Caskaydia Cove Nerd Font"
-  (
-    @ pushd "$(mktemp --directory)" || exit
-    @ wget https://github.com/ryanoasis/nerd-fonts/releases/download/v2.3.3/CascadiaCode.zip
-    @ unzip CascadiaCode.zip
-    @ mkdir --parent ~/.local/share/fonts/
-    @ mv *.otf ~/.local/share/fonts/
-    @ popd || exit
-  )
-fi
