:building_construction: move all files to a dedicated folder

--- a/chezmoi/dot_gitconfig.tmpl
+++ b/chezmoi/dot_gitconfig.tmpl
@@ -9,7 +9,7 @@
 # ---
 [user]
   email = {{ .email }}
-  name = {{ .full_name }}
+  name = {{ .name }}
 
 [color]
   # Enable colors in color-supporting terminals
