--- a/chezmoi/.chezmoitemplates/banner.tmpl
+++ b/chezmoi/.chezmoitemplates/banner.tmpl
@@ -1,4 +1,4 @@
-{{- $title := "XNLI-Workspace" -}}
+{{- $title := "ANDC-Workspace" -}}
 {{- if kindIs "map" . -}}{{- $title = .Title -}}{{- end -}}
 {{- $title = (trim (regexReplaceAll "(.)" $title "${1} ")) -}}
 
