:sparkles: add DIRENV installation

--- a/chezmoi/.chezmoiexternal.toml.tmpl
+++ b/chezmoi/.chezmoiexternal.toml.tmpl
@@ -10,6 +10,12 @@ type = "git-repo"
 exact = true
 url = "https://github.com/nyrst/asdf-zoxide.git"
 
+# --- DIRENV installation
+[".local/bin/direnv"]
+type = "file"
+url = "https://github.com/direnv/direnv/releases/download/{{ .packages.direnv_version }}/direnv.{{ .chezmoi.os }}-{{ .chezmoi.arch }}"
+executable = true
+
 # --- FD-FIND installation
 [".local/bin/fd"]
 type = "archive-file"
