:sparkles: add FD-FIND installation

--- a/chezmoi/.chezmoiexternal.toml.tmpl
+++ b/chezmoi/.chezmoiexternal.toml.tmpl
@@ -1,3 +1,6 @@
+# vim: ft=toml
+
+# --- ASDF & plugin installation
 [".asdf"]
 type = "git-repo"
 url = "https://github.com/asdf-vm/asdf.git"
@@ -7,8 +10,32 @@ type = "git-repo"
 exact = true
 url = "https://github.com/nyrst/asdf-zoxide.git"
 
+# --- FD-FIND installation
+[".local/bin/fd"]
+type = "archive-file"
+{{ if and (eq .chezmoi.os "linux") (eq .chezmoi.arch "amd64") }}
+url = "https://github.com/sharkdp/fd/releases/download/{{ .packages.fd_version }}/fd-{{ .packages.fd_version }}-x86_64-unknown-linux-gnu.tar.gz"
+path = "fd-{{ .packages.fd_version }}-x86_64-unknown-linux-gnu/fd"
+{{ end }}
+executable = true
+
+[".local/share/man/man1/fd-find.1"]
+type = "archive-file"
+{{ if and (eq .chezmoi.os "linux") (eq .chezmoi.arch "amd64") }}
+url = "https://github.com/sharkdp/fd/releases/download/{{ .packages.fd_version }}/fd-{{ .packages.fd_version }}-x86_64-unknown-linux-gnu.tar.gz"
+path = "fd-{{ .packages.fd_version }}-x86_64-unknown-linux-gnu/fd.1"
+{{ end }}
+
+[".local/config/fish/completions/fd.fish"]
+type = "archive-file"
+{{ if and (eq .chezmoi.os "linux") (eq .chezmoi.arch "amd64") }}
+url = "https://github.com/sharkdp/fd/releases/download/{{ .packages.fd_version }}/fd-{{ .packages.fd_version }}-x86_64-unknown-linux-gnu.tar.gz"
+path = "fd-{{ .packages.fd_version }}-x86_64-unknown-linux-gnu/autocomplete/fd.fish"
+{{ end }}
+
+# --- FZF installation
 [".local/bin/fzf"]
 type = "archive-file"
-url = "https://github.com/junegunn/fzf/releases/download/{{ .fzf_version }}/fzf-{{ .fzf_version }}-{{ .chezmoi.os }}_{{ .chezmoi.arch }}.tar.gz"
+url = "https://github.com/junegunn/fzf/releases/download/{{ .packages.fzf_version }}/fzf-{{ .packages.fzf_version }}-{{ .chezmoi.os }}_{{ .chezmoi.arch }}.tar.gz"
 path = "fzf"
 executable = true
